# ChangeLog for media-fonts/terminus-font
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.85 2011/06/14 17:49:39 grobian Exp $

  14 Jun 2011; Fabian Groffen <grobian@gentoo.org> terminus-font-4.35.ebuild:
  Marked ~x86-macos (#369547) and ~ppc-macos

*terminus-font-4.35 (20 May 2011)

  20 May 2011; Justin Lecher <jlec@gentoo.org> -terminus-font-4.34.ebuild,
  +terminus-font-4.35.ebuild:
  Version bump, fixes #366391

*terminus-font-4.34 (06 May 2011)

  06 May 2011; Justin Lecher <jlec@gentoo.org> terminus-font-4.30.ebuild,
  +terminus-font-4.34.ebuild:
  Non-maintainer Version Bump, notified by euscan

  22 Jan 2011; Ryan Hill <dirtyepic@gentoo.org> terminus-font-4.30.ebuild,
  terminus-font-4.32.ebuild, +files/terminus-font-4.32-parallel-install.patch:
  Properly fix parallel install (bug #352321 by Tolga Dalman).

  21 Jan 2011; Justin Lecher <jlec@gentoo.org> terminus-font-4.30.ebuild,
  terminus-font-4.32.ebuild:
  Fix parallel installation problem, #352321

*terminus-font-4.32 (20 Jan 2011)

  20 Jan 2011; Dror Levin <spatz@gentoo.org> +terminus-font-4.32.ebuild:
  Version bump, bug 351108.

  07 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  terminus-font-4.30.ebuild:
  ppc64 stable wrt #320303

  01 Jul 2010; Peter Volkov <pva@gentoo.org> -terminus-font-4.28.ebuild,
  terminus-font-4.30.ebuild:
  Drop old. Update HOMEPAGE, thank upstream developer Dimitar Zhekov for
  notification.

  19 Jun 2010; Raúl Porcel <armin76@gentoo.org> terminus-font-4.30.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable wrt #320303

  20 May 2010; Peter Volkov <pva@gentoo.org> terminus-font-4.30.ebuild:
  amd64 stable, bug #320303

  20 May 2010; Jeroen Roovers <jer@gentoo.org> terminus-font-4.30.ebuild:
  Stable for HPPA PPC (bug #320303).

  15 Mar 2010; Jeremy Olexa <darkside@gentoo.org> terminus-font-4.30.ebuild: