@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX terminus-font-4.32-parallel-install.patch 310 RMD160 c8531c74c222f72cf031abfa98d0502378db6ade SHA1 02fe72c4e8a8cdd16450ae7a064490083e834bb5 SHA256 3ca83cd99f02a348920973796989c15ea52b3c57586887aa23993939a9b4f0c7
 DIST terminus-font-4.30-ao2.diff.gz 4064 RMD160 042b4d1fde790cc9414d20235079f8487c69857e SHA1 15c1c2d0221b302bcbc57c2595dc39c0db9509a7 SHA256 4586eb56533c3fad417b13d64c88bb97a3604f68dac1fc4c90372c9c93cc82ac
@@ -16,15 +16,17 @@ DIST terminus-font-4.30-kx3.diff.gz 3135 RMD160 0744f53720b1f9196e1122f85dd9f3d5
 DIST terminus-font-4.30.tar.gz 267236 RMD160 d7835e99012895b15f295fc1d19551c9ed241354 SHA1 472dbdc8ee7fa42ea8f91e41e9f154f23f9453b9 SHA256 ca15718f715f1ca7af827a8ab5543b0c0339b2515f39f8c15f241b2bc1a15a9a
 DIST terminus-font-4.32.tar.gz 278839 RMD160 7b649f6610764763bdb8e44c39c95fe06edd6d93 SHA1 10be9f7f09f642b941acc7f644545e23fbb0494d SHA256 f05a8afb426af080bc94b6ac9846daac2a3f2e2883feaf96a503bb2e5507aea4
 DIST terminus-font-4.35.tar.gz 313577 RMD160 8c9dba3bb135536777b790f3c9623eb14db44f78 SHA1 0cd2707c7041ae6e34f743c2401c510053e9c9cf SHA256 6ae4cd2186050c96997052e167013aa21b6039a164f31fa06e9ae697f3d8b8dc
+DIST terminus-font-4.36.tar.gz 309387 RMD160 a10138462e6aa7cf2b6a3f7960b72b1703fa5f7d SHA1 bbd839f8d21f4bcbf2c6d98aa1b5842bddc675c0 SHA256 7b0dcebd8ef2e36aeeb7fcd97082ad881e95b2871e40c9a6255377bea6bcd345
 EBUILD terminus-font-4.30.ebuild 3296 RMD160 6d2920d1ff3c1c1ca8ead19bd625877e1abf0781 SHA1 5756cd77d06e37b9b7725bcaf14c00c96128d834 SHA256 50ee2dbbf541d9243f17c6d2823cc490eb63feb588f04790e11b9de2777a6e22
 EBUILD terminus-font-4.32.ebuild 2572 RMD160 c430d651b370208ad1dd5db336ae6c1350398953 SHA1 21c0e8b157f26bc81af0af70e5c4cc37ada4722b SHA256 3f4354182484cad334f7ce8b9b7602d5deb24255482850501bb2618efa57df80
 EBUILD terminus-font-4.35.ebuild 2614 RMD160 6c0c253d0e460dea78232adab6d0ce24757d18f2 SHA1 01e56852bc7c9cd7e506e6440360d2e18571f212 SHA256 74a81c5753025e4ada2e9dd0925f28703581186d39bb41d84cde33ec21cb1173
-MISC ChangeLog 12125 RMD160 a0eab4719b1a63283530a47a7a79aa47efb873e0 SHA1 43625f8eda0ac6c8d3e30aa746aa9c27e64ef1d6 SHA256 6e6d925754e65deeafc348f607f34ed0dd2bfc29b2e7db77a97bddd2009f9f07
-MISC metadata.xml 1210 RMD160 482c71c57abd30d4f39d5a701af80a0f2c14b867 SHA1 4eeceb65135e59a6344daff5696b57eb6537e537 SHA256 52607b7eb4be346a553675b968b3e27e0273f7229856e860ad5d2eb7dd466797
+EBUILD terminus-font-4.36.ebuild 2554 RMD160 7ea97f73fedb3cdeca2dfcd6a066c7702ba070ee SHA1 338ba654bd4415f89e00f2b16aa083b17bb9db47 SHA256 21485ab0accdacb0d17283f4d56ec71f2df21cddef33f564e60d06265290f111
+MISC ChangeLog 12264 RMD160 0a67c88f5d2f35970deeb794cd5a3a5cdb5f2198 SHA1 afdd431c91f2ba76ee8a56b671ffd48eb913b836 SHA256 38ce73a6a67bbf16eee57c868823fb7dd470bf89c903652b3ae8b8d7744ff48f
+MISC metadata.xml 1279 RMD160 003c14a4ed98b98853650de21fa8fe6d3823e854 SHA1 060ab983ac67ad25f7f374c658117d81e35dfcf3 SHA256 04e72a7092135c122aa6c7baef6f732bc54d588e50f9a2a5ba2f288e8e5379da
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (Darwin)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEUEARECAAYFAk33nxEACgkQX3X2B8XHTonQVwCYz4zBITssQU7LXoa3PpTupX9I
-sQCfSn6mp9LcNXRzlwC2T2Rt1mI4qk0=
-=mmwM
+iEYEAREKAAYFAk5JBNsACgkQgAnW8HDreRaLVACfZ6jYZd+rNHgwncIBWFDtA19/
++DIAoK+YfaZ1+v6yuk7mTG9uNZg7yRL3
+=y3s2
 -----END PGP SIGNATURE-----
