@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>fonts</herd>
-<use>
-	<flag name='psf'>Install PC Screen Font (PSF) with unicode data (for linux
-		console)</flag>
-	<flag name='raw-font-data'>Install RAW font data which should be compatible
-	with most UNIX systems (you don't need this on linux)</flag>
-	<flag name='pcf'>Install Portable Compiled Font (PCF) (required for X11)</flag>
-	<flag name='a-like-o'>Changes view of letter 'a' - a looks like o
-		(see homepage)</flag>
-	<flag name='bolddiag'>Boldified diagonal parts of '4', 'k', 'x' and some
-		other chars</flag>
-	<flag name='quote'>Changes view of quotes: symmetric ` and ' instead of
-		asymmetric one (see homepage)</flag>
-	<flag name='ru-dv'>Changes view of Russian letters 'de' and 've' (see
-		homepage)</flag>
-	<flag name='ru-g'>Changes view of Russian letter 'ge' (see homepage)</flag>
-	<flag name='ru-i'>Changes view of Russian letter 'i' - not like Latin u,
-		but like "mirrored" N (see homepage)</flag>
-	<flag name='ru-k'>Changes view of Russian letter 'k' (see homepage)</flag>
-	<flag name='width'>Wider versions of some font elements</flag>
-</use>
+	<herd>fonts</herd>
+	<use>
+		<flag name="psf">
+			Install PC Screen Font (PSF) with unicode data (for linux console)
+		</flag>
+		<flag name="raw-font-data">
+			Install RAW font data which should be compatible with most 
+			UNIX systems (you don't need this on linux)
+		</flag>
+		<flag name="pcf">
+			Install Portable Compiled Font (PCF) (required for X11)
+		</flag>
+		<flag name="a-like-o">
+			Changes view of letter 'a' - a looks like o	(see homepage)
+		</flag>
+		<flag name="bolddiag">
+			Boldified diagonal parts of '4', 'k', 'x' and some other chars
+		</flag>
+		<flag name="quote">
+			Changes view of quotes: symmetric ` and ' 
+			instead of asymmetric one (see homepage)
+		</flag>
+		<flag name="ru-dv">
+			Changes view of Russian letters 'de' and 've' (see	homepage)
+		</flag>
+		<flag name="ru-g">Changes view of Russian letter 'ge' (see homepage)</flag>
+		<flag name="ru-i">
+			Changes view of Russian letter 'i' - not like Latin u, 
+			but like "mirrored" N (see homepage)
+		</flag>
+		<flag name="ru-k">Changes view of Russian letter 'k' (see homepage)</flag>
+		<flag name="width">Wider versions of some font elements</flag>
+	</use>
 </pkgmetadata>
