@@ -1,6 +1,12 @@
 # ChangeLog for media-fonts/terminus-font
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.85 2011/06/14 17:49:39 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.86 2011/08/15 11:36:53 jlec Exp $
+
+*terminus-font-4.36 (15 Aug 2011)
+
+  15 Aug 2011; Justin Lecher <jlec@gentoo.org> +terminus-font-4.36.ebuild,
+  metadata.xml:
+  Version Bump
 
   14 Jun 2011; Fabian Groffen <grobian@gentoo.org> terminus-font-4.35.ebuild:
   Marked ~x86-macos (#369547) and ~ppc-macos
